# chess-reinforcement-learning

./: .env  .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  chessengine.sln  chessengine.vcxproj  chessengine.vcxproj.filters  cmake_install.cmake  requirements.txt  training_log.csv
Debug/: chessengine.exp
Release/: chessengine.exp  chessengine.lib
chessengine/: attack_tables.cpp  attack_tables.h  bindings.cpp  board.cpp  board.h  movegen.cpp  movegen.h  utils.cpp  utils.h
chessengine.dir/Debug/: chessengine.cp312-win_amd64.pyd.recipe
chessengine.dir/Debug/chessengine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
chessengine.dir/Release/: chessengine.cp312-win_amd64.iobj  chessengine.cp312-win_amd64.pyd.recipe
chessengine.dir/Release/chessengine.tlog/: CL.10668.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
docs/: ARCHITECTURE.md
python/: run_play.bat
python/engine/: chess_board.py
python/gui/: pygame_gui.py
python/model/: model.py
python/train/: python_chess.py  selfplay.py  train.py
x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Release/ALL_BUILD/: ALL_BUILD.recipe
x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
(+6 files in other folders)
